--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                 </div>
                 <div class="feed-statement">
                     <i class="fa fa-quote-left"></i>
-                    <p>
+                    <p class="output">
                         Aliquam ultrices venenatis mauris. 
                         Vestibulum ante ipsum primis in faucibus orci luctus et. 
                         Aliquam ultrices venenatis mauris. 
